--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -15,5 +15,8 @@
     "@modrinth/app-frontend": "workspace:*",
     "@modrinth/app-lib": "workspace:*",
     "@modrinth/daedalus": "workspace:*"
+  },
+  "modrinthPlus": {
+    "enabled": true
   }
 }
