--- a/.github/workflows/migurinthrelease.yml
+++ b/.github/workflows/migurinthrelease.yml
@@ -35,9 +35,12 @@ jobs:
       - name: Check if version exists as tag
         id: check_tag
         run: |
-          if git rev-parse "v$VERSION" >/dev/null 2>&1; then
-            echo "Version $VERSION already exists. Skipping release."
+          git fetch --tags
+          if git show-ref --tags "v$VERSION" --quiet; then
+            echo "::error::Version v$VERSION already exists as a tag. Please increment the version number."
             exit 1
+          else
+            echo "Version v$VERSION is available for release."
           fi
 
   build:
@@ -191,36 +194,28 @@ jobs:
         with:
           tag_name: v${{ env.version }}
           name: Release v${{ env.version }}
-          body: 'A new version of the Modrinth App has been released!'
+          body: 'A new version of the MiguRinth App has been released!'
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            target/*/release/bundle/*/*.dmg
+            target/*/release/bundle/*/*.app.tar.gz
+            target/*/release/bundle/*/*.app.tar.gz.sig
+            target/release/bundle/*/*.dmg
+            target/release/bundle/*/*.app.tar.gz
+            target/release/bundle/*/*.app.tar.gz.sig
 
-      - name: Download existing updates.json from GitHub Release
-        id: get_updates
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if gh release download v${{ env.version }} --pattern updates.json; then
-            mv updates.json updates_old.json
-            echo "Existing updates.json found in release."
-          else
-            echo '{"platforms": {}}' > updates_old.json
-            echo "No previous updates.json found, creating a new one."
-          fi
+            target/release/bundle/*/*.AppImage
+            target/release/bundle/*/*.AppImage.tar.gz
+            target/release/bundle/*/*.AppImage.tar.gz.sig
+            target/release/bundle/*/*.deb
+            target/release/bundle/*/*.rpm
 
-      - name: Generate new updates.json
-        id: generate_updates
-        run: |
-          TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.%NZ")
-          jq --arg version "$VERSION" --arg timestamp "$TIMESTAMP" '.version=$version | .pub_date=$timestamp' updates_old.json > updates.json
+            target/release/bundle/msi/*.msi
+            target/release/bundle/msi/*.msi.zip
+            target/release/bundle/msi/*.msi.zip.sig
 
-      - name: Upload updates.json to release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./updates.json
-          asset_name: updates.json
-          asset_content_type: application/json
+            target/release/bundle/nsis/*.exe
+            target/release/bundle/nsis/*.nsis.zip
+            target/release/bundle/nsis/*.nsis.zip.sig
