--- a/.github/workflows/migurinthrelease.yml
+++ b/.github/workflows/migurinthrelease.yml
@@ -181,6 +181,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release-artifacts
+          merge-multiple: true
+
       - name: Extract version
         id: version
         run: |
@@ -199,23 +205,117 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
           files: |
-            target/*/release/bundle/*/*.dmg
-            target/*/release/bundle/*/*.app.tar.gz
-            target/*/release/bundle/*/*.app.tar.gz.sig
-            target/release/bundle/*/*.dmg
-            target/release/bundle/*/*.app.tar.gz
-            target/release/bundle/*/*.app.tar.gz.sig
+            release-artifacts/**/*.dmg
+            release-artifacts/**/*.app.tar.gz
+            release-artifacts/**/*.app.tar.gz.sig
+            release-artifacts/**/*.AppImage
+            release-artifacts/**/*.AppImage.tar.gz
+            release-artifacts/**/*.AppImage.tar.gz.sig
+            release-artifacts/**/*.deb
+            release-artifacts/**/*.rpm
+            release-artifacts/**/*.msi
+            release-artifacts/**/*.msi.zip
+            release-artifacts/**/*.msi.zip.sig
+            release-artifacts/**/*.exe
+            release-artifacts/**/*.nsis.zip
+            release-artifacts/**/*.nsis.zip.sig
 
-            target/release/bundle/*/*.AppImage
-            target/release/bundle/*/*.AppImage.tar.gz
-            target/release/bundle/*/*.AppImage.tar.gz.sig
-            target/release/bundle/*/*.deb
-            target/release/bundle/*/*.rpm
+  generate-update-file:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-            target/release/bundle/msi/*.msi
-            target/release/bundle/msi/*.msi.zip
-            target/release/bundle/msi/*.msi.zip.sig
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
 
-            target/release/bundle/nsis/*.exe
-            target/release/bundle/nsis/*.nsis.zip
-            target/release/bundle/nsis/*.nsis.zip.sig
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install pnpm and tauri-cli
+        run: |
+          corepack enable
+          corepack prepare --activate
+          pnpm install -g @tauri-apps/cli
+
+      - name: Generate updates.json
+        run: |
+          VERSION=$(jq -r '.version' apps/app/tauri.conf.json)
+
+          # Generate updates.json for each platform
+          tauri signer generate-update \
+            -i artifacts/windows-latest \
+            -i artifacts/macos-latest \
+            -i artifacts/ubuntu-22.04 \
+            -o updates.json
+
+      - name: Upload updates.json to release
+        run: |
+          gh release upload "v$VERSION" updates.json --clobber
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+generate-update-file:
+  needs: release
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - name: Install pnpm and tauri-cli
+      run: |
+        corepack enable
+        corepack prepare --activate
+        pnpm install -g @tauri-apps/cli
+
+    - name: Generate updates.json
+      run: |
+        VERSION=$(jq -r '.version' apps/app/tauri.conf.json)
+        BASE_URL="https://github.com/$GITHUB_REPOSITORY/releases/download/v$VERSION"
+
+        # Windows paths
+        WIN_UPDATE="${BASE_URL}/Migurinth_${VERSION}_x64-setup.nsis.zip"
+        WIN_INSTALL="${BASE_URL}/Migurinth_${VERSION}_x64-setup.exe"
+
+        # macOS paths
+        MAC_UPDATE="${BASE_URL}/Migurinth_${VERSION}_universal.app.tar.gz"
+        MAC_INSTALL="${BASE_URL}/Migurinth_${VERSION}_universal.dmg"
+
+        # Linux paths
+        LINUX_UPDATE="${BASE_URL}/migurinth_${VERSION}_amd64.AppImage.tar.gz"
+        LINUX_DEB="${BASE_URL}/migurinth_${VERSION}_amd64.deb"
+        LINUX_RPM="${BASE_URL}/migurinth_${VERSION}_amd64.rpm"
+        LINUX_APPIMAGE="${BASE_URL}/migurinth_${VERSION}_amd64.AppImage"
+
+        # Generate updates.json
+        tauri signer generate-update \
+          -i artifacts/windows-latest \
+          -i artifacts/macos-latest \
+          -i artifacts/ubuntu-22.04 \
+          --base-url $BASE_URL \
+          --windows-url "$WIN_UPDATE" \
+          --windows-install-url "$WIN_INSTALL" \
+          --macos-url "$MAC_UPDATE" \
+          --macos-install-url "$MAC_INSTALL" \
+          --linux-url "$LINUX_UPDATE" \
+          --linux-install-urls "$LINUX_DEB,$LINUX_RPM,$LINUX_APPIMAGE" \
+          -o updates.json
+
+    - name: Upload updates.json to release
+      run: |
+        gh release upload "v$VERSION" updates.json --clobber
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
