--- a/.github/workflows/migurinthrelease.yml
+++ b/.github/workflows/migurinthrelease.yml
@@ -301,7 +301,7 @@ jobs:
           TAURI_BIN="$(pnpm bin -g)/tauri"
           echo "Using Tauri binary at: $TAURI_BIN"
           BASE_URL="https://github.com/${{ github.repository }}/releases/download/v${{ env.VERSION }}"
-          $TAURI_BIN signer generate-update \
+          $TAURI_BIN signer generate \
             -i artifacts/windows-latest \
             -i artifacts/macos-latest \
             -i artifacts/ubuntu-22.04 \
