--- a/.github/workflows/migurinthrelease.yml
+++ b/.github/workflows/migurinthrelease.yml
@@ -247,20 +247,20 @@ jobs:
         shell: bash
         run: |
           set -e
-          # URL base para descargas
+          # Construye la URL base a partir del repo y la versión
           BASE_URL="https://github.com/${{ github.repository }}/releases/download/v${{ env.VERSION }}"
           UPDATES_JSON="updates.json"
           PUB_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
-          # Define la estructura para cada plataforma:
-          # Formato: "plataforma"="<archivo_comprimido>;<archivo_instalacion1>,<archivo_instalacion2>,..."
+          # Define el mapeo para cada plataforma en el formato:
+          # "platform": "compressed_file;install_file1,install_file2,..."
           declare -A PLATFORMS=(
             ["linux-x86_64"]="Modrinth.App_${{ env.VERSION }}_amd64.AppImage.tar.gz;Modrinth.App_${{ env.VERSION }}_amd64.deb,Modrinth.App_${{ env.VERSION }}_amd64.AppImage,Modrinth.App_${{ env.VERSION }}_amd64.rpm"
             ["windows-x86_64"]="Modrinth.App_${{ env.VERSION }}_x64-setup.nsis.zip;Modrinth.App_${{ env.VERSION }}_x64-setup.exe"
             ["darwin-x86_64"]="Modrinth.App.app.tar.gz;Modrinth.App_${{ env.VERSION }}_universal.dmg"
           )
 
-          # Comienza a construir el JSON
+          # Inicia la construcción del JSON
           echo '{' > $UPDATES_JSON
           echo '  "version": "'${{ env.VERSION }}'",' >> $UPDATES_JSON
           echo '  "notes": "A new version of the Modrinth App has been released!",' >> $UPDATES_JSON
@@ -270,10 +270,11 @@ jobs:
           FIRST=1
           for platform in "${!PLATFORMS[@]}"; do
             ENTRY="${PLATFORMS[$platform]}"
-            # Divide ENTRY en dos partes separadas por ";"
+            # Divide ENTRY en dos partes: primero el archivo comprimido, luego la lista de archivos de instalación
             COMPRESSED_FILE=$(echo "$ENTRY" | cut -d';' -f1)
             INSTALL_FILES=$(echo "$ENTRY" | cut -d';' -f2)
-            FILE_URL="${BASE_URL}/${COMPRESSED_FILE}"
+            
+            COMPRESSED_URL="${BASE_URL}/${COMPRESSED_FILE}"
             SIG_FILE="artifacts/${COMPRESSED_FILE}.sig"
             
             if [ ! -f "$SIG_FILE" ]; then
@@ -283,6 +284,20 @@ jobs:
             
             SIGNATURE=$(cat "$SIG_FILE" | tr -d '\n')
             
+            # Construir el arreglo de install_urls
+            IFS=',' read -ra INSTALL_ARRAY <<< "$INSTALL_FILES"
+            INSTALL_URLS_JSON=""
+            FIRST_URL=1
+            for f in "${INSTALL_ARRAY[@]}"; do
+              URL="${BASE_URL}/${f}"
+              if [ $FIRST_URL -eq 1 ]; then
+                INSTALL_URLS_JSON="\"${URL}\""
+                FIRST_URL=0
+              else
+                INSTALL_URLS_JSON="${INSTALL_URLS_JSON}, \"${URL}\""
+              fi
+            done
+            
             if [ $FIRST -eq 1 ]; then
               FIRST=0
             else
@@ -290,24 +305,9 @@ jobs:
             fi
             
             echo "    \"${platform}\": {" >> $UPDATES_JSON
-            echo "      \"url\": \"${FILE_URL}\"," >> $UPDATES_JSON
+            echo "      \"url\": \"${COMPRESSED_URL}\"," >> $UPDATES_JSON
             echo "      \"signature\": \"${SIGNATURE}\"," >> $UPDATES_JSON
-            echo "      \"install_urls\": [" >> $UPDATES_JSON
-            
-            # Separa INSTALL_FILES por comas y recorre cada uno
-            IFS=',' read -ra URLS <<< "$INSTALL_FILES"
-            FIRST_URL=1
-            for url_file in "${URLS[@]}"; do
-              INSTALL_URL="${BASE_URL}/${url_file}"
-              if [ $FIRST_URL -eq 1 ]; then
-                FIRST_URL=0
-              else
-                echo "        ," >> $UPDATES_JSON
-              fi
-              echo "        \"${INSTALL_URL}\"" >> $UPDATES_JSON
-            done
-            
-            echo "      ]" >> $UPDATES_JSON
+            echo "      \"install_urls\": [ ${INSTALL_URLS_JSON} ]" >> $UPDATES_JSON
             echo "    }" >> $UPDATES_JSON
           done
 
